--- a/package.json
+++ b/package.json
@@ -4,19 +4,26 @@
     "private": true,
     "dependencies": {
         "axios": "^0.18.0",
+        "bcrypt": "^3.0.3",
         "chance": "^1.0.18",
+        "dotenv": "^6.2.0",
         "express": "^4.16.4",
+        "jsonwebtoken": "^8.4.0",
+        "mongoose": "^5.4.1",
+        "passport": "^0.4.0",
+        "passport-local": "^1.0.0",
         "peer": "^0.2.10",
         "prop-types": "^15.6.2",
         "react": "^16.6.3",
         "react-dom": "^16.6.3",
         "react-redux": "^6.0.0",
         "react-router-dom": "^4.3.1",
-        "react-scripts": "2.1.1",
+        "react-scripts": "^2.1.2",
         "redux": "^4.0.1",
         "redux-saga": "^0.16.2",
         "redux-thunk": "^2.3.0",
         "socket.io": "^2.2.0",
+        "socket.io-client": "^2.2.0",
         "ws": "^6.1.2"
     },
     "scripts": {
@@ -33,5 +40,6 @@
         "not dead",
         "not ie <= 11",
         "not op_mini all"
-    ]
+    ],
+    "proxy": "http://localhost:3001"
 }
