--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "axios": "^0.18.0",
         "bcrypt": "^3.0.3",
+        "body-parser": "^1.18.3",
         "chance": "^1.0.18",
         "dotenv": "^6.2.0",
         "express": "^4.16.4",
@@ -22,8 +23,7 @@
         "redux": "^4.0.1",
         "redux-saga": "^0.16.2",
         "redux-thunk": "^2.3.0",
-        "socket.io": "^2.2.0",
-        "ws": "^6.1.2"
+        "socket.io": "^2.2.0"
     },
     "scripts": {
         "start": "react-scripts start",
