--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 JWT_KEY='ITWOOOOORKSSSSSSSSSSSSSSSSSS'
 DATABASE='mongodb://localhost:27017/react-chat-app'
-API_BASE_URL='http://localhost:3002/'
+API_BASE_URL='ws://localhost:3002/'
+PORT=3002
