--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
         "redux-thunk": "^2.3.0",
         "socket.io": "^2.2.0"
     },
+    "devDependencies": {
+        "autoprefixer": "^8.3.0",
+        "nodemon": "^1.17.5",
+        "postcss-cli": "^5.0.0",
+        "redux-devtools": "^3.4.1",
+        "tailwindcss": "^0.5.2"
+    },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
