--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "body-parser": "^1.18.3",
         "dotenv": "^6.2.0",
         "express": "^4.16.4",
+        "font-awesome": "^4.7.0",
         "jsonwebtoken": "^8.4.0",
         "mongoose": "^5.4.1",
         "passport": "^0.4.0",
