--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "dotenv": "^6.2.0",
         "express": "^4.16.4",
         "font-awesome": "^4.7.0",
+        "http-proxy-middleware": "^0.19.1",
         "jsonwebtoken": "^8.4.0",
         "mongoose": "^5.4.1",
         "passport": "^0.4.0",
